--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Map</a>
                 <a href="#">Submit</a>
                 <a href="#">View Spots</a>
-                <a href="#">Log In</a>
+                <a href="login.html">Log In</a>
             </nav>
         </div>
     </header>
