added signup html

--- a/public/login.html
+++ b/public/login.html
@@ -18,8 +18,10 @@
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-  background: #f1f1f1;
+  background: #ffffff;
 }
+
+
 
 </style>
   </head>
@@ -38,17 +40,19 @@
     </header>
     <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
+    <div class="container-fluid ">
     <form class="form-signin">
-        <h1>Please sign in</h1>
+        <h1>Please log in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <button class="button alt" type="submit">Sign in</button>
-       
+        <p> Don't have an account? <a href="signup.html"> Create one now.</a></p>
+
+      </div>
       
  
-
     <section id="footer" style="width:100%"> 
         <div class="inner">
         </div>
