added images folder

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
   <style>
+      * {background-image: "./images/background.jpg"}
   </style>
   
     </head>
@@ -34,7 +35,7 @@
         <div class="inner" >
             <h1>Welcome to Regina Skate</h1>
             <ul class="actions">
-                <li><a href="#" class="button alt">Get Started</a></li>
+                <li><a href="view.html" class="button alt">Get Started</a></li>
             </ul>
         </div>
     </section>
