--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
             <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
             <nav id="nav">
               <a href="map.page.html">Map</a>
-              <a href="submit.html">Submit</a>
+              <a href="post.html">post</a>
               <a href="view.html">View Spots</a>
               <a href="login.html">Log In</a>
             </nav>
@@ -48,7 +48,7 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <button class="button alt" type="submit">Sign in</button>
-        <p> Don't have an account? <a href="signup.html"> Create one now.</a></p>
+        <p> Don't have an account? <a href="register.html"> Create one now.</a></p>
 
       </div>
       
