--- a/public/register.html
+++ b/public/register.html
@@ -67,7 +67,7 @@
             <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
             <nav id="nav">
               <a href="map.page.html">Map</a>
-              <a href="submit.html">Submit</a>
+              <a href="post.html">post</a>
               <a href="view.html">View Spots</a>
               <a href="login.html">Log In</a>
             </nav>
