--- a/public/view.html
+++ b/public/view.html
@@ -10,9 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
-  <style>
-  </style>
-  
+
     </head>
   <body>
     <header id="header">
@@ -21,7 +19,7 @@
             <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
             <nav id="nav">
                 <a href="map.page.html">Map</a>
-                <a href="submit.html">Submit</a>
+                <a href="post.html">post</a>
                 <a href="view.html">View Spots</a>
                 <a href="login.html">Log In</a>
             </nav>
@@ -29,58 +27,19 @@
     </header>
     <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-    <section id="banner">
+    <section id="banner" >
 				
-        <div class="inner" >
-            <h1>Welcome to Regina Skate</h1>
-            <ul class="actions">
-                <li><a href="#" class="button alt">Get Started</a></li>
-            </ul>
-        </div>
+   
     </section>
 
-    <section id="one">
-        <div class="inner">
-            <header>
-                <h2>View the Map</h2>
-            </header>
-            <p>See the locations of all skate spots users have shared in Regina. Find the spot closest to you.</p>
-            <ul class="actions">
-                <li><a href="#" class="button alt">Learn More</a></li>
-            </ul>
-        </div>
-    </section>
 
-    <section id="two">
+<br>
+<br>
         <div class="inner">
-            <article>
-                <div class="content">
-                    <header>
-                        <h3>Add a Spot</h3>
-                    </header>
-                    <div class="image fit">
-                        <img src="images/pic01.jpg" alt="" />
-                    </div>
-                    <p>Share your favouite place to skate in Regina with others.</p>
-                    <ul class="actions">
-                        <li><a href="#" class="button alt">Learn More</a></li>
-                    </ul>
-                </div>
-            </article>
-            <article class="alt">
-                <div class="content">
-                    <header>
-                        <h3>View Spots</h3>
-                    </header>
-                    <div class="image fit">
-                        <img src="images/pic02.jpg" alt="" />
-                    </div>
-                    <p>View skate spots shared by other users.</p>
-                    <ul class="actions">
-                        <li><a href="#" class="button alt">Learn More</a></li>
-                    </ul>
-                </div>
-            </article>
+          <img src="images/wascana.jpg" height="200" width="400">  
+          <p Name: >Wascana Skate Plaza</p>
+          <p>Description: It's a Skate Park.</p>
+          <p>location: CCM5+C5 Regina, Sherwood No. 159, SK</p>
         </div>
     </section>
 
@@ -89,6 +48,24 @@
         </div>
     </section>
 
+  </section>
+
+
+  <br>
+  <br>
+          <div class="inner">
+            <img src="images/rochdale.jpg" height="200" width="400">  
+            <p> Name: Lakeridge Skate Park</p>
+            <p>Description:  It's a Skate Park.</p>
+            <p>F8WV+69 Regina, Sherwood No. 159, SK  F8WV+69 Regina, Sherwood No. 159</p>
+          </div>
+      </section>
+  
+      <section id="footer">
+          <div class="inner">
+          </div>
+      </section>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
